aya-assembly/src/parser/snapshots/aya_assembly__parser__tests__exported_constant.snap
---
source: aya-assembly/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Const {
            name: ByteOffset {
                start: 7,
                end: 11,
            },
            exported: true,
            value: HexLiteral(
                ByteOffset {
                    start: 15,
                    end: 19,
                },
            ),
        },
    ],
}
