aya-assembly/src/parser/snapshots/aya_assembly__parser__tests__exported_data16.snap
---
source: aya-assembly/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Data {
            name: ByteOffset {
                start: 8,
                end: 12,
            },
            size: 16,
            exported: true,
            values: [
                Address(
                    ByteOffset {
                        start: 20,
                        end: 24,
                    },
                ),
                HexLiteral(
                    ByteOffset {
                        start: 28,
                        end: 32,
                    },
                ),
            ],
        },
    ],
}
