aya-assembly/src/parser/snapshots/aya_assembly__parser__tests__private_data8.snap
---
source: aya-assembly/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Data {
            name: ByteOffset {
                start: 6,
                end: 10,
            },
            size: 8,
            exported: false,
            values: [
                Address(
                    HexLiteral(
                        ByteOffset {
                            start: 18,
                            end: 22,
                        },
                    ),
                ),
                HexLiteral(
                    ByteOffset {
                        start: 26,
                        end: 30,
                    },
                ),
            ],
        },
    ],
}
