aya-assembly/src/parser/snapshots/aya_assembly__parser__tests__private_label.snap
---
source: aya-assembly/src/parser/mod.rs
expression: result
---
Ast {
    statements: [
        Label {
            name: ByteOffset {
                start: 0,
                end: 4,
            },
            exported: false,
        },
    ],
}
